# FreedomOS-dev

./: .gitignore  .ruff.toml  .typos.toml  README.md
ouroboros/: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  server.py
ouroboros/config/: settings.py
ouroboros/db/: mongodb.py
ouroboros/requirements/: deployment.txt  dev-linux.txt  dev-windows.txt
ouroboros/src/: __init__.py
ouroboros/src/decorators/: __init__.py  logger.py  pusher.py
ouroboros/src/models/: __init__.py  db.py  incoming_client_request.py  incoming_robot_response.py  outgoing_robot_request.py  render.py
ouroboros/src/routers/: __init__.py  batch.py  inventory.py  robot.py  scan.py
ouroboros/src/services/factories/: __init__.py  robot_job_factory.py  robot_response_factory.py
ouroboros/src/services/handlers/: __init__.py  handler.py
ouroboros/src/services/model/: barcode.py  item.py  partial_item.py  rectangle.py
ouroboros/src/services/robot_requests/: __init__.py  base_robot_job_builder.py  fetch_designated.py  fetch_inventory.py  store_designated.py  store_inventory.py
ouroboros/src/services/robot_responses/: __init__.py  base_robot_response.py  fetch_designated.py  fetch_inventory.py  store_designated.py  (+1 more)
ouroboros/src/utils/: __init__.py  model_parse.py
ouroboros/test/: mock_database.py  mock_robot.py  test_batch_request.py  test_batch_response.py  test_render_inventory_request.py  test_scan.py
ouroboros/test/tools/: sim.py
ouroboros/tools/: send_batch_request.py  send_compile_request.py  send_render_request.py  send_scan_request.py  update_scan_id.py
(+81 files in other folders)
